<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="SnowballProject" customModuleProvider="target">
            <connections>
                <outlet property="loginLabel" destination="p8T-58-07s" id="WhG-El-anN"/>
                <outlet property="passwordTextField" destination="bKf-1e-qlH" id="oqK-uW-09O"/>
                <outlet property="usernameTextField" destination="P8r-86-6O8" id="tjD-7u-rFx"/>
                <outlet property="view" destination="iN0-l3-epB" id="vdT-kV-QpJ"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aFz-PC-Iff">
                    <rect key="frame" x="275" y="477" width="91" height="35"/>
                    <color key="backgroundColor" red="0.36078431370000003" green="0.79215686269999996" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <accessibility key="accessibilityConfiguration" identifier="Login"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Login">
                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="loginButtonPress:" destination="-1" eventType="touchUpInside" id="gVB-hM-dEo"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8T-58-07s">
                    <rect key="frame" x="46" y="241" width="78" height="36"/>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                    <color key="textColor" red="0.36078431372549019" green="0.792156862745098" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P8r-86-6O8">
                    <rect key="frame" x="46" y="337" width="301" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="usernameTextField"/>
                    <color key="textColor" red="0.4823529412" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bKf-1e-qlH">
                    <rect key="frame" x="46" y="400" width="301" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                    <color key="textColor" red="0.4823529412" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="provision_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Uk8-ga-zYd">
                    <rect key="frame" x="136" y="117" width="120" height="53"/>
                </imageView>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <color key="backgroundColor" red="0.92941176469999998" green="0.93333333330000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
            <constraints>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="P8r-86-6O8" secondAttribute="trailing" constant="46" id="9HF-Hr-L5D"/>
                <constraint firstItem="P8r-86-6O8" firstAttribute="top" secondItem="p8T-58-07s" secondAttribute="bottom" constant="60" id="B35-c7-VVA"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="aFz-PC-Iff" secondAttribute="trailing" constant="27" id="GjG-7D-9zi"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bKf-1e-qlH" secondAttribute="trailing" constant="46" id="Pvz-kC-Ymb"/>
                <constraint firstItem="Uk8-ga-zYd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="58" id="QsL-D1-R1Q"/>
                <constraint firstItem="bKf-1e-qlH" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="46" id="hCJ-tI-1ps"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Uk8-ga-zYd" secondAttribute="trailing" constant="137" id="hMt-ki-bi4"/>
                <constraint firstItem="p8T-58-07s" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="46" id="lLS-6e-vex"/>
                <constraint firstItem="Uk8-ga-zYd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="136" id="lrb-GM-Kod"/>
                <constraint firstItem="aFz-PC-Iff" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="275" id="lse-Kq-RIJ"/>
                <constraint firstItem="aFz-PC-Iff" firstAttribute="top" secondItem="bKf-1e-qlH" secondAttribute="bottom" constant="43" id="mVQ-5u-m9O"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="aFz-PC-Iff" secondAttribute="bottom" constant="306" id="oLs-is-XDo"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="p8T-58-07s" secondAttribute="trailing" constant="269" id="tSX-3O-jQJ"/>
                <constraint firstItem="bKf-1e-qlH" firstAttribute="top" secondItem="P8r-86-6O8" secondAttribute="bottom" constant="29" id="voh-sb-jYi"/>
                <constraint firstItem="P8r-86-6O8" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="46" id="wOv-A7-uB7"/>
            </constraints>
            <point key="canvasLocation" x="32.824427480916029" y="19.718309859154932"/>
        </view>
    </objects>
    <resources>
        <image name="provision_logo" width="333" height="53"/>
    </resources>
</document>
